[package]
name = "scape"
version = "0.1.0"
authors = ["Andrew Toast <anumrich@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "*"
glam = "0.8.7"
rand = "0.7"
nalgebra = "0.21.0"
winit = "0.22.2"